Eventually, this file might turn into a changelog based on
[[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]],
where version numbers starting with version 2.0.0 adhere to
[[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].

So far, only versions starting with version [[*%5B1.1.11%5D - 2019-08-19][1.1.11]],
created on 2019-08-19, are documented properly.

** [Unreleased]

** [2.3.0] - 2019-09-04
*** Added
    - Variable [[file:org-re-reveal.el::(defcustom%20org-re-reveal-subtree-with-title-slide][org-re-reveal-subtree-with-title-slide]]
      with option ~reveal_subtree_with_title_slide~ to include title
      slides upon subtree exports

** [2.2.0] - 2019-09-04
*** Added
    - A subheading for a slide can be created with the new property
      ~NOSLIDE~ on the subheading, see file:test-cases/test-noslide.org

** [2.1.0] - 2019-08-23
*** Added
    - Job ~pages~ in file:.gitlab-ci.yml
      to publish Readme and test cases as reveal.js presentations
      at https://oer.gitlab.io/org-re-reveal/
      - File file:test-cases/publish.el
      - File file:index.org
    - Function [[file:org-re-reveal.el::(defun%20org-re-reveal-publish-to-reveal-client][org-re-reveal-publish-to-reveal-client]]
    - Test file:test-cases/test-multiplex.org
*** Changed
    - Set [[file:org-re-reveal.el::(defcustom%20org-re-reveal-multiplex-url][org-re-reveal-multiplex-url]]
      and [[file:org-re-reveal.el::(defcustom%20org-re-reveal-multiplex-socketio-url][org-re-reveal-multiplex-socketio-url]]
      to working default values
    - Switch to Docker image ~emacs-reveal~ in file:./.gitlab-ci.yml
*** Fixed
    - Replace ~caddr~ (and ~cadr~) with ~nth~; ~caddr~ is provided by
      ~cl~, which was only implicitly required by ~htmlize~

** [2.0.1] - 2019-08-21
*** Fixed
    - Adjust
      [[file:org-re-reveal.el::(defcustom%20org-re-reveal-klipse-extra-css%20"<style>][org-re-reveal-klipse-extra-css]]
      for compatibility with oer-reveal CSS settings
